<resources>
    <string name="app_name">SampleCodeDump</string>
    <string name="tvSampleTwoBase">Sample 2</string>
    <string name="btnSampleOne">Sample 1</string>
    <string name="btnSampleTwo">Sample 2</string>
    <string name="tvSampleTwoCount">Count: </string>
    <string name="btnSampleThree">Sample 3</string>
    <string name="tvSampleFour">Sample 4</string>
    <string name="content_description_sample_4">Sample 4 test</string>
    <string name="image_button_sample_seven">Changes image to android</string>
    <string name="image_button_sample_eight">Change background to leaf</string>
    <string name="image_view_sample_eight">Background image</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_bar_sample_twelve">Run Fast!</string>
    <string name="action_bar_options_sample_twelve">Do the Awesome stuff!</string>
    <string name="btn_return_sample_fourteen">SAMPLE 14</string>
    <string name="et_return_sample_fourteen">Name</string>
    <string name="enter_name_activity_second_sample_fourteen">enter name</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sample_seventeen_taipei">Taipei</string>
    <string name="sample_seventeen_vancouver">Vancouver</string>
    <string name="sample_nineteen_applications_rejected">\"%1$d applications rejects\"</string>
    <string name="sample_15">Sample 15</string>
    <string name="sample_19">Sample 19</string>
    <string name="sampleTwentyOneSecretMessage">it\'s a secret!</string>
    <string name="sample_twenty_one_secret_message_prompt">Do you want to see the message?</string>
    <string name="animal_crossing_leaf">Animal Crossing Leaf</string>
    <string name="sample_21">Sample 21</string>
    <string name="beep_boop">beep boop</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="chart_title_my_clothing">My Clothing</string>
    <string name="layout">Layout</string>
    <string name="weight">Weight</string>
    <string name="sample_22">Sample 22</string>
    <string name="developed_by_me">developed by me!</string>
    <string name="sample_33">Sample 33</string>
    <string name="sample_34">Sample 34</string>
</resources>